# PyFAcc-SCF

./: CMakeLists.txt  README.md  single_file.py  test_scf.ipynb
data/molecules/: b.in  be.in  c.in  h.in  h.xyz  h2.in  h2o.xyz  li.in  o2.in  rna1.xyz  rna2.xyz  rna4.xyz  rna5.xyz  rna6.xyz  rna7.xyz  rna8.xyz  rna9.xyz  structure_in_file.txt
python/: parser.py  test_scf.py
src/: molecule_module.f90  scf_interface.c  scf_interface.f90  scf_module.f90  slater.f90  utils_module.f90
src/c/: scf_interface.c
src/cpp/: libint_wrapper.cpp  libint_wrapper.h
src/fortran/: basis.f90  basis_old.f90  boys.f90  cartesian.f90  electronic.f90  gaussian.f90  integral_module.f90  integrals.f90  io.f90  kinetic.f90  la.f90  libint_f.f90  libint_integrals.f90  main.f90  molecule.f90  molecule_module.f90  nuclear.f90  overlap.f90  rscf.f90  scf_interface.f90  scf_module.f90  schwarz.f90  slater.f90  uscf.f90  utils.f90  utils_module.f90
src/fortran/structs/: basis_function_struct.f90  basis_struct.f90  constants_struct.f90  eri_struct.f90  molecule_struct.f90
src/python/: helper_functions.py
